# python-legacy

./: .copier-answers.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  duties.py  index.html  llms-full.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: flake8.ini  mypy.ini  pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: class_index.html  covindex.html  d_9cec3bd1cfcac3ff_collector_py.html  d_9cec3bd1cfcac3ff_handler_py.html  d_9cec3bd1cfcac3ff_renderer_py.html  d_9cec3bd1cfcac3ff_rendering_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_collector_py.html  d_a44f0ac069e85531_test_renderer_py.html  d_a44f0ac069e85531_test_themes_py.html  function_index.html  index.html  status.json  z_9cec3bd1cfcac3ff___init___py.html  z_9cec3bd1cfcac3ff_handler_py.html  z_9cec3bd1cfcac3ff_rendering_py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_collector_py.html  z_a44f0ac069e85531_test_renderer_py.html  z_a44f0ac069e85531_test_themes_py.html
credits/: index.html
docs/: reference.md  usage.md
docs/.overrides/partials/: comments.html
docs/reference/mkdocstrings_handlers/: python.md
license/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/mkdocstrings/handlers/python/: index.html
reference/mkdocstrings/handlers/python/collector/: index.html
reference/mkdocstrings/handlers/python/renderer/: index.html
reference/mkdocstrings_handlers/python/: index.html
reference/mkdocstrings_handlers/python/handler/: index.html
reference/mkdocstrings_handlers/python/rendering/: index.html
scripts/: fixsetup.sh  gen_credits.py  setup.sh
search/: search_index.json
src/mkdocstrings/handlers/python/: __init__.py  collector.py  renderer.py
src/mkdocstrings_handlers/_internal/: debug.py
src/mkdocstrings_handlers/python/: collector.py  debug.py  handler.py  renderer.py  rendering.py
tests/: __init__.py  conftest.py  test_api.py  test_collector.py  test_renderer.py  test_themes.py
usage/: index.html
